--- a/app/index.html
+++ b/app/index.html
@@ -15,56 +15,42 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="laReleveApp" layout="row" ng-controller="PrimaryCtrl" ng-cloak class="md-default-theme">
+  <body ng-app="laReleveApp" layout="column" ng-controller="PrimaryCtrl" ng-cloak class="md-default-theme">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <!-- SideNav -->
-    <md-sidenav id="navigation_drawer" layout="column" class="md-sidenav-left md-whiteframe-z2 md-navigation-drawer" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" ng-cloak>
+    <!-- Main toolbar -->
+    <md-toolbar ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1" ng-show="!showSearch">
+      <div class="md-toolbar-tools">
+        <!-- Hamburger icon -->
+        <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
+          <md-icon md-svg-icon="navigation:ic_menu_24px" aria-label="Menu"></md-icon>
+        </md-button>
+        <h3>
+          La Relève - Accueil
+        </h3>
+        <span flex="10"></span>
+        <md-input-container flex="50" id='menageSearchInputContainer' md-theme="input">
+          <label>&nbsp;</label>
+          <input id="menageSearchInput" ng-model="menageSearch" placeholder="Rechercher un ménage">
+        </md-input-container>
+        <span flex></span>        
 
-      <!-- Sidenav toolbar -->
-      <md-toolbar class="md-hue-2 md-tall">
-        <img id="sidenav-logo" src="images/Logo_LA_RELEVE.jpg" alt="logo La Relève">
+        <!-- Search and menus icons -->
+        <md-button class="md-icon-button" aria-label="Search" ng-click="toggleSearch()">
+          <md-icon md-svg-icon="action:ic_search_24px" aria-label="Search"></md-icon>
+        </md-button>
+        <md-button class="md-icon-button" aria-label="Open Settings" ng-click="showListBottomSheet($event)">
+          <md-icon md-svg-icon="navigation:ic_more_vert_24px" aria-label="More"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
 
-        <!-- <img id="sidenav-background" src="images/Logo_LA_RELEVE.jpg"> -->
-        <span flex></span>
-        <div class="md-body-2">NOM Prénom</div>
-        <div class="md-body-1">Rôle</div>
-      </md-toolbar>
-      <md-list class="slideLeftToRight">
-        <md-list-item role="link" md-ink-ripple ng-click="showLoadingBar(); go('/'); toggleSidenav('left')">
-          <md-icon md-svg-icon="{{item.icon}}" aria-label="{{item.title}}"></md-icon>
-          <p>Accueil</p>
-        </md-list-item>
-        <md-list-item role="link" md-ink-ripple ng-click="showLoadingBar(); go('/roles'); toggleSidenav('left')">
-          <md-icon md-svg-icon="{{item.icon}}" aria-label="{{item.title}}"></md-icon>
-          <p>Rôles</p>
-        </md-list-item>
-        <md-list-item role="link" md-ink-ripple ng-click="showLoadingBar(); go(item.link); toggleSidenav('left')">
-          <md-icon md-svg-icon="{{item.icon}}" aria-label="{{item.title}}"></md-icon>
-          <p>Menu n°3</p>
-        </md-list-item>
-        <md-list-item role="link" md-ink-ripple ng-click="showLoadingBar(); go(item.link); toggleSidenav('left')">
-          <md-icon md-svg-icon="{{item.icon}}" aria-label="{{item.title}}"></md-icon>
-          <p>Menu n°4</p>
-        </md-list-item>
-        <md-divider></md-divider>
-        <md-subheader class="md-no-sticky">Management</md-subheader>
-        <md-list-item ng-repeat="item in admin" role="link" md-ink-ripple>
-          <md-icon md-svg-icon="{{item.icon}}" aria-label="{{item.title}}"></md-icon>
-          <p class="md-body-2">{{item.title}}</p>
-        </md-list-item>
-        <md-list-item role="link" md-ink-ripple ng-click=" toggleSidenav('left'); logOut()">
-          <md-icon md-svg-icon="action:ic_exit_to_app_24px" aria-label="Déconnexion"></md-icon>
-          <p class="md-body-2">Déconnexion</p>
-        </md-list-item>
-      </md-list>
-    </md-sidenav>
 
     <!-- Main Layout -->
-    <div layout="row" class="relative" layout-fill role="main">
+    <div flex layout="row" class="relative" layout-fill role="main">
         <md-progress-linear class="loadingBar md-warn" md-mode="indeterminate" ng-show="loadingBar"></md-progress-linear>
 
         <md-content layout="row" layout-fill ng-view></md-content>
@@ -106,6 +92,7 @@
         <script src="scripts/services/exemplefactory.js"></script>
         <script src="scripts/services/environments.js"></script>
         <script src="scripts/services/webservices.js"></script>
+        <script src="scripts/controllers/menage.js"></script>
         <!-- endbuild -->
 </body>
 </html>
