--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
     <!-- Add your site or application content here -->
     <!-- Main toolbar -->
-    <md-toolbar ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1" ng-show="!showSearch">
+    <md-toolbar id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
       <div class="md-toolbar-tools">
         <!-- Hamburger icon -->
         <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
