--- a/app/index.html
+++ b/app/index.html
@@ -93,6 +93,7 @@
         <script src="scripts/services/environments.js"></script>
         <script src="scripts/services/webservices.js"></script>
         <script src="scripts/controllers/menage.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
