--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
         <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
           <md-icon md-svg-icon="navigation:ic_menu_24px" aria-label="Menu"></md-icon>
         </md-button>
-        <h3>
+        <h3 ng-click="go('/')">
           La Relève - Accueil
         </h3>
         <span flex="10"></span>
@@ -94,6 +94,7 @@
         <script src="scripts/services/webservices.js"></script>
         <script src="scripts/controllers/menage.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/menagecreation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
