--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   </head>
   <body ng-app="laReleveApp" layout="column" ng-controller="PrimaryCtrl" ng-cloak class="md-default-theme">
     <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">Vous utilisez un navigateur <strong>trop ancien</strong>. Merci de <a href="http://browsehappy.com/">le mettre à jour</a> pour améliorer votre experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
