--- a/app/index.html
+++ b/app/index.html
@@ -95,6 +95,7 @@
         <script src="scripts/controllers/menage.js"></script>
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/menagecreation.js"></script>
+        <script src="scripts/controllers/menageinfos.js"></script>
         <!-- endbuild -->
 </body>
 </html>
