--- a/app/index.html
+++ b/app/index.html
@@ -22,12 +22,12 @@
 
     <!-- Add your site or application content here -->
     <!-- Main toolbar -->
-    <md-toolbar id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
+    <md-toolbar ng-show="locationExposer().path()!='/login'"id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
       <div class="md-toolbar-tools">
         <!-- Hamburger icon -->
-        <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
+        <!-- <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
           <md-icon md-svg-icon="navigation:ic_menu_24px" aria-label="Menu"></md-icon>
-        </md-button>
+        </md-button> -->
         <h3 ng-click="go('/')">
           La Relève - Accueil
         </h3>
