--- a/app/index.html
+++ b/app/index.html
@@ -82,6 +82,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -97,6 +98,7 @@
         <script src="scripts/controllers/login.js"></script>
         <script src="scripts/controllers/menagecreation.js"></script>
         <script src="scripts/controllers/menageinfos.js"></script>
+        <script src="scripts/services/authenticationfactory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
