Add Logout button and function

--- a/app/index.html
+++ b/app/index.html
@@ -39,13 +39,30 @@
         </md-input-container>
         <span flex></span>        
 
-        <!-- Menu icon -->
+        <!-- Menu and avatar icons -->
         <md-button class="md-icon-button" aria-label="Open Settings" ng-click="showListBottomSheet($event)">
           <md-icon md-svg-icon="navigation:ic_more_vert_24px" aria-label="More"></md-icon>
         </md-button>
-        <md-button class="md-icon-button" aria-label="Open Settings" ng-click="showListBottomSheet($event)">
-          <md-icon class="md-avatar"  md-svg-icon="avatars:svg-1" aria-label="avatar"></md-icon>
-        </md-button>
+        <md-menu-bar>
+          <md-menu>
+            <md-button class="md-icon-button" aria-label="Open Settings" ng-click="$mdOpenMenu()">
+              <md-icon class="md-avatar"  md-svg-icon="avatars:svg-1" aria-label="avatar"></md-icon>
+            </md-button>
+            <md-menu-content>
+              <md-menu-item>
+                <md-button ng-click="logoutPrimary()">
+                  Déconnexion
+                </md-button>
+              </md-menu-item>
+              <md-menu-divider></md-menu-divider>
+              <md-menu-item>
+                <md-button disabled="disabled">
+                  Rôles
+                </md-button>
+              </md-menu-item>
+            </md-menu-content>
+          </md-menu>
+        </md-menu-bar>
       </div>
     </md-toolbar>
 
