Fix sprite on build version & add .config/environments.js

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
         <md-menu-bar>
           <md-menu>
             <md-button class="md-icon-button" aria-label="Open Settings" ng-click="$mdOpenMenu()">
-              <md-icon class="md-avatar"  md-svg-icon="avatars:svg-1" aria-label="avatar"></md-icon>
+              <img class="png-icon" src="images/avatar.png" style="width: 50px; border-radius: 50%;">
             </md-button>
             <md-menu-content>
               <md-menu-item>
