--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,7 @@
         <script src="scripts/controllers/menageinfos.js"></script>
         <script src="scripts/services/authenticationfactory.js"></script>
         <script src="scripts/services/actionsfactory.js"></script>
+        <script src="scripts/services/menagefactories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
