ActesRealisesFactories et PrestationsRealiseesFactories created

--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,8 @@
         <script src="scripts/services/authenticationfactory.js"></script>
         <script src="scripts/services/actionsfactory.js"></script>
         <script src="scripts/services/menagefactories.js"></script>
+        <script src="scripts/services/prestationsrealiseesfactories.js"></script>
+        <script src="scripts/services/actesrealisesfactories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
