--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
         <script src="scripts/services/menagefactories.js"></script>
         <script src="scripts/services/prestationsrealiseesfactories.js"></script>
         <script src="scripts/services/actesrealisesfactories.js"></script>
+        <script src="scripts/services/individufactories.js"></script>
         <!-- endbuild -->
 </body>
 </html>
