--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,11 @@
 
     <!-- Add your site or application content here -->
     <!-- Main toolbar -->
-    <md-toolbar ng-show="locationExposer().path()!='/login'"id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
+    <md-toolbar ng-show="locationExposer().path()!='/login'" id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
       <div class="md-toolbar-tools">
         <!-- Hamburger icon -->
-        <!-- <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
-          <md-icon md-svg-icon="navigation:ic_menu_24px" aria-label="Menu"></md-icon>
-        </md-button> -->
-        <h3 ng-click="go('/')">
+        <img ng-click="go('/')" ng-src="images/R_lareleve.jpg" class="md-card-image logoToolbar pointerMouse" alt="logo La Relève">
+        <h3 ng-click="go('/')" class="pointerMouse">
           La Relève
         </h3>
         <span flex="15"></span>
@@ -45,12 +43,12 @@
             md-search-text="searchText"
             md-require-match
             md-items="item in searchMenage(searchText)"
-            md-item-text="item.id"
+            md-item-text="item.nomChefMenage"
             md-floating-label="&nbsp;"
             placeholder="Rechercher un ménage"
             md-theme="greyTheme">
           <md-item-template>
-            <span ng-click="go('/menage/'+item.id)" md-highlight-text="searchText">Ménage {{item.id}}</span>
+            <span style="display: block;" ng-click="go('/menage/'+item.id)" md-highlight-text="searchText">Ménage {{item.nomChefMenage}}</span>
           </md-item-template>
           <md-not-found>
             <a ng-click="go('/menage/1')">Aucun résulat pour "{{searchText}}". Créez un nouvel individu en cliquant ici !</a>
@@ -62,9 +60,7 @@
         <span flex></span>        
 
         <!-- Menu and avatar icons -->
-        <md-button class="md-icon-button" aria-label="Open Settings" ng-click="showListBottomSheet($event)">
-          <md-icon md-svg-icon="navigation:ic_more_vert_24px" aria-label="More"></md-icon>
-        </md-button>
+        
         <md-menu-bar>
           <md-menu>
             <md-button class="md-icon-button" aria-label="Open Settings" ng-click="$mdOpenMenu()">
