Fix missing icon on built app !

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <md-toolbar ng-show="locationExposer().path()!='/login'" id="mainToolbar" ng-class="{'slideTopToBottom': firstAppLaunch, 'animate-show': !firstAppLaunch}" class="md-whiteframe-z1">
       <div class="md-toolbar-tools">
         <!-- Hamburger icon -->
-        <img ng-click="go('/')" ng-src="images/R_lareleve.jpg" class="md-card-image logoToolbar pointerMouse" alt="logo La Relève">
+        <img ng-click="go('/')" src="images/R_lareleve.jpg" class="md-card-image logoToolbar pointerMouse" alt="logo La Relève">
         <h3 ng-click="go('/')" class="pointerMouse">
           La Relève
         </h3>
